fixed horizontal scrollbar to fit dimensions of activity card container

--- a/app/assets/stylesheets/components/_category_card.scss
+++ b/app/assets/stylesheets/components/_category_card.scss
@@ -1,10 +1,10 @@
 .category-scroll {
   overflow: auto;
   height: 75px;
-  width: 100%;
   display: flex;
   flex-direction: row;
   margin-left: 16px;
+  margin-right: 16px;
   margin-top: 22px;
 }
 
